less/tumblr.less
/* ... */
// INDEX PAGE
.index-page {
    #posts {
        padding: 0;
        margin: 15px 20px 0 20px;

        .post {
            width: 48%;
            margin: 1%;
            float: left;
            position: relative;
            overflow: hidden;

            .wrap { padding: 0; }
            .media {
                width: auto;
                float: none;
                display: block;
                margin: 3px;

                a { display: block; }
                .img-holder {
                    display: block;
                    width: 100%;
                    height: 200px;
                    background-size: cover;
                    background-position: 50% 50%;
                    background-repeat: no-repeat;
                }
            }
            .caption.excerpt {
                padding: 0;
                margin: 6px;

                p {
                    margin: 5px;
                    font-size: 12px;
                    line-height: 1.4;
                }
                .signature-name, .footnote { display: none; }
            }
        }
    }
}
.touch .index-page {
    ul.timestamp {
        margin: 3px 6px 6px 6px;
        
        li { margin: 0; }
    }
    #posts .post {
        p.message {
            height: 50px;
            overflow: hidden;
        }
    }
}
.touch #blog_info .mobile-prompt { display: none; }
@-webkit-keyframes caption-slide {
   from { bottom: -200px }
   to   { bottom: 0; }
}
@-moz-keyframes caption-slide {
   from { bottom: -200px }
   to   { bottom: 0; }
}
.no-touch .index-page {
    #posts .post {
        .caption.excerpt {
            background: #000;
            background: rgba(0,0,0,.7);
            position: absolute;
            bottom: -200px; left: 0;

            p { color: #fff; }
            a { display: block; }
        }
        .post_info { display: none; }
        &:hover .caption.excerpt {
            -webkit-animation-name: caption-slide;
            -webkit-animation-duration: .25s;
            -moz-animation-name: caption-slide;
            -moz-animation-duration: .25s;
            bottom: 0;
        }
    }
}


// CLEARING FLOATS
header:after, #container:after, .caption_and_post_info:after, footer:after .buttons:after {
    content: "."; display: block; height: 0; clear: both; visibility: hidden;
}


// MEDIA QUERIES
@media (min-width: 1600px) {
    .index-page #posts .post { width: 19%; margin: .5%; }
    #container { min-height: 1800px; }
}
@media (min-width: 1400px) and (max-width: 1599px) {
    .index-page #posts .post { width: 23%; margin: 1%; }
}
@media (min-width: 1200px) and (max-width: 1399px) {
    .index-page #posts .post { width: 31%; margin: 1%; }
}
@media (min-width: 1200px) { }
@media (min-width: 980px) { }
@media (max-width: 979px) {
    #nav .site-links-2 { display: none; }
}
@media (max-width: 767px) {
    #nav .site-links { margin-left: 20px; }
    #container { display: block; width: 100%; }
    #blog_info { padding: 33px 20px 20px 20px; }
    header, #post-wrap { display: block; width: auto; }
    #blog_info {
        padding: 33px 20px 0 20px;
        position: static;
        width: auto;

        h1 {
            margin-bottom: 2px;
            a { 
                background: url('@{img-root}/cook-your-cupboard-hd-sm.png') no-repeat;
                height: 33px;
            }
        }
        .project-prompt { margin-bottom: 0; }
        #modal-btn {
            height: 44px;
            padding-top: 0;
            font-size: 14px;
            line-height: 44px;

            span { margin-top: 0; }
        }
        .mobile-prompt {
            margin-top: 0;
            padding-bottom: 0;
            border-bottom: 0;

            p { padding-top: 8px; }
            strong { display: inline; }
        }
        .round-list { display: none; }
    }
    #project-form {
        top: 2%;
        left: 2%;
        width: 96%;
        height: 96%;
    }
    #posts { padding: 0 10px; }
    .index-page {
        header { margin-bottom: 11px; }
        #blog_info { padding-bottom: 11px; }
        #blog_info .project-prompt { margin-bottom: 11px; }
        #posts { margin: 0 10px 0 10px; }
    }
}
@media (max-width: 480px) {
    #nav .site-links {
        li { display: none; }
        .npr { display: block; }
    }
    #blog_info h1 { font-size: 36px; }
    #posts { 
        padding-left: 10px; padding-right: 10px;
        .post .wrap { padding: 11px 15px 15px 15px; }
    }
    .post_info li {
        float: none;
        margin-bottom: 3px;
        
        &.round-wrap .round {
            border-right: none;
            margin-right: 0;
            padding-right: 0;
        }
    }
    .round1 .post_info li.round-wrap .round1 { display: block; }
    .round2 .post_info li.round-wrap .round2 { display: block; }
    #footer { padding-left: 10px; margin-left: 0; margin-right: 0; }
    .index-page {
        #posts .post { 
            width: auto; margin: 0 0 20px 0; float: none;
            
            p.message { height: auto; overflow: visible; }
        }
    }
    #project-form {
        font-size:12px;
    }
}

